--- a/css/navigation.css
+++ b/css/navigation.css
@@ -12246,3 +12246,13 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
     width: 100%
 }
+
+
+.badge-nav {
+    margin-left: .4rem;
+    margin-right: .4rem;
+    padding: .4em;
+}
+
+
+
